--- a/.eslintrc
+++ b/.eslintrc
@@ -3,9 +3,10 @@
         "browser": true,
         "es2021": true
     },
+    "parser": "vue-eslint-parser",
     "extends": [
         "eslint:recommended",
-        "plugin:vue/essential",
+        "plugin:vue/strongly-recommended",
         "plugin:@typescript-eslint/recommended"
     ],
     "parserOptions": {
@@ -18,5 +19,12 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-unused-vars": "off",
+        "no-undef": "off",
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/ban-types": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "vue/multi-word-component-names": "off",
+        "vue/component-name-in-template-casing": "off"
     }
 }
