--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Backend baseUrl (Production)
-VITE_PROD_URL="https://shuwashuwa.kinami.cc/api/"
+VITE_PROD_URL="https://shuwashuwa.kinami.cc"
 # Backend baseUrl (Development)
-VITE_DEV_URL="http://shuwashuwa.kinami.cc:8848/api/"
+VITE_DEV_URL="http://shuwashuwa.kinami.cc:8848"
