--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@vicons/carbon": "^0.12.0",
     "@vueuse/head": "^0.7.5",
     "axios": "^0.25.0",
     "pinia": "^2.0.9",
