--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/parser": "^5.10.1",
     "@vicons/ionicons5": "^0.11.0",
     "@vitejs/plugin-vue": "^2.1.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.3",
     "@vue/test-utils": "^2.0.0-rc.18",
     "@vueuse/core": "^7.5.4",
     "critters": "^0.0.16",
