--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vicons/carbon": "^0.12.0",
     "@vueuse/head": "^0.7.5",
     "axios": "^0.25.0",
+    "flexsearch": "^0.7.21",
     "pinia": "^2.0.9",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12"
@@ -20,12 +21,12 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.16.0",
     "@iconify-json/carbon": "^1.0.14",
+    "@types/flexsearch": "^0.7.2",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "@vicons/ionicons5": "^0.11.0",
     "@vitejs/plugin-vue": "^2.1.0",
-    "@vitejs/plugin-vue-jsx": "^1.3.3",
     "@vue/test-utils": "^2.0.0-rc.18",
     "@vueuse/core": "^7.5.4",
     "critters": "^0.0.16",
