--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vicons/carbon": "^0.12.0",
     "@vueuse/head": "^0.7.5",
     "axios": "^0.25.0",
+    "date-fns": "^2.28.0",
     "flexsearch": "^0.7.21",
     "pinia": "^2.0.9",
     "vue": "^3.2.29",
