--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "dependencies": {
     "@vueuse/head": "^0.7.5",
     "axios": "^0.25.0",
+    "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "flexsearch": "^0.7.21",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.9",
     "timeago.js": "^4.0.2",
     "vue": "^3.2.29",
-    "vue-router": "^4.0.12"
+    "vue-chart-3": "^3.0.9",
+    "vue-router": "^4.0.12",
+    "xlsx": "^0.18.2"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.0.14",
     "@types/flexsearch": "^0.7.2",
+    "@types/lodash": "^4.14.178",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
